added PDF/A2b support

--- a/src/Rubicon.PdfService/app.config
+++ b/src/Rubicon.PdfService/app.config
@@ -29,6 +29,9 @@ along with this program; if not, see <http://www.gnu.org/licenses/>.
             <setting name="RbIccProfileName" serializeAs="String">
                 <value>sRGB IEC61966-2.1</value>
             </setting>
+            <setting name="PdfAHeaderVersion" serializeAs="String">
+                <value>PdfA1b</value>
+            </setting>
         </Rubicon.PdfService.Settings>
     </applicationSettings>
 </configuration>
