--- a/src/Rubicon.PdfService/packages.config
+++ b/src/Rubicon.PdfService/packages.config
@@ -18,5 +18,6 @@ along with this program; if not, see <http://www.gnu.org/licenses/>.
 <packages>
   <package id="iTextSharp" version="5.5.8" targetFramework="net45" />
   <package id="itextsharp.pdfa" version="5.5.8" targetFramework="net45" />
+  <package id="JetBrains.Annotations" version="2020.1.0" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net45" />
 </packages>
