--- a/src/Rubicon.PdfService/Settings.settings
+++ b/src/Rubicon.PdfService/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="RbIccProfileName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">sRGB IEC61966-2.1</Value>
     </Setting>
+    <Setting Name="PdfAHeaderVersion" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">PdfA1b</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
