--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,8 @@ publish/
 
 # NuGet Packages
 *.nupkg
+# except local package sources
+!**/PackageSource/*.nupkg
 # The packages folder can be ignored because of Package Restore
 **/packages/*
 # except build/, which is used as an MSBuild target.
