--- a/src/Rubicon.PdfService/packages.config
+++ b/src/Rubicon.PdfService/packages.config
@@ -16,8 +16,9 @@ You should have received a copy of the GNU Affero General Public License
 along with this program; if not, see <http://www.gnu.org/licenses/>.
 -->
 <packages>
-  <package id="iTextSharp" version="5.5.8" targetFramework="net45" />
-  <package id="itextsharp.pdfa" version="5.5.8" targetFramework="net45" />
+  <package id="BouncyCastle.Cryptography" version="2.3.1" targetFramework="net48" />
   <package id="JetBrains.Annotations" version="2020.1.0" targetFramework="net45" />
+  <package id="Rubicon.iTextSharp" version="5.5.13.4" targetFramework="net48" />
+  <package id="Rubicon.itextsharp.pdfa" version="5.5.13.4" targetFramework="net48" />
   <package id="log4net" version="2.0.0" targetFramework="net45" />
 </packages>
