--- a/src/Rubicon.PdfService/packages.config
+++ b/src/Rubicon.PdfService/packages.config
@@ -17,8 +17,12 @@ along with this program; if not, see <http://www.gnu.org/licenses/>.
 -->
 <packages>
   <package id="BouncyCastle.Cryptography" version="2.3.1" targetFramework="net48" />
-  <package id="JetBrains.Annotations" version="2020.1.0" targetFramework="net45" />
+  <package id="JetBrains.Annotations" version="2023.3.0" targetFramework="net48" />
   <package id="Rubicon.iTextSharp" version="5.5.13.4" targetFramework="net48" />
   <package id="Rubicon.itextsharp.pdfa" version="5.5.13.4" targetFramework="net48" />
-  <package id="log4net" version="2.0.0" targetFramework="net45" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.CommandLine" version="2.0.0-beta4.22272.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
 </packages>
