--- a/src/Rubicon.PdfService.Contract/Rubicon.PdfService.Contract.csproj
+++ b/src/Rubicon.PdfService.Contract/Rubicon.PdfService.Contract.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result.cs" />
     <Compile Include="SourceDocument.cs" />
+    <Compile Include="SourceDocumentInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Rubicon.Pdf.Service.Contract.licenseheader" />
